<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/img_employee"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:src="@drawable/ic_add_photo"
            android:scaleType="centerCrop"/>

        <EditText
            android:id="@+id/edt_nik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emp_nik"/>

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emp_name"/>

        <EditText
            android:id="@+id/edt_birth_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false"
            android:hint="@string/emp_birth_date"
            android:inputType="none"/>

        <EditText
            android:id="@+id/edt_birth_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emp_birth_place"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Status"/>

            <RadioGroup
                android:id="@+id/rg_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_married"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="Married"/>

                <RadioButton
                    android:id="@+id/rb_single"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="Single"/>

            </RadioGroup>

        </LinearLayout>

        <EditText
            android:id="@+id/edt_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emp_level"/>

        <Button
            android:id="@+id/btn_save_employee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_save"/>

    </LinearLayout>

</ScrollView>